--- a/client/package.json
+++ b/client/package.json
@@ -12,13 +12,18 @@
   "dependencies": {
     "@maplibre/maplibre-gl-leaflet": "^0.1.0",
     "@tailwindcss/vite": "^4.1.3",
-    "axios": "^1.8.4",
+    "autoprefixer": "^10.4.21",
+    "axios": "^1.9.0",
+    "framer-motion": "^12.10.0",
     "leaflet": "^1.9.4",
     "leaflet-routing-machine": "^3.2.12",
-    "react": "^19.0.0",
+    "postcss": "^8.5.3",
+    "react": "^19.1.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
-    "tailwindcss": "^4.1.3"
+    "tailwindcss": "^4.1.5",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
