--- a/client/package.json
+++ b/client/package.json
@@ -19,9 +19,12 @@
     "leaflet-routing-machine": "^3.2.12",
     "postcss": "^8.5.3",
     "react": "^19.1.0",
+    "react-animated-weather": "^4.0.1",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
+    "react-router-dom": "^7.6.1",
+    "react-select": "^5.10.1",
     "tailwindcss": "^4.1.5",
     "yarn": "^1.22.22"
   },
