--- a/package.json
+++ b/package.json
@@ -17,5 +17,7 @@
     "globals": "^16.1.0",
     "prettier": "^3.5.3"
   },
-  "dependencies": {}
+  "dependencies": {
+    "react-router-dom": "^7.6.1"
+  }
 }
