--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "4.21.0",
+    "express-rate-limit": "^7.5.0",
     "flag-icons": "^7.3.2",
     "google-auth-library": "^9.15.1",
     "http-errors": "^2.0.0",
