--- a/server/package.json
+++ b/server/package.json
@@ -4,10 +4,12 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon bin/www.js"
+    "dev": "nodemon bin/www.js",
+    "start:bot": "nodemon bot/grammY.js"
   },
   "license": "MIT",
   "dependencies": {
+    "@grammyjs/ratelimiter": "^1.2.1",
     "ajv": "^8.17.1",
     "axios": "^1.9.0",
     "bcrypt": "^5.1.1",
@@ -19,6 +21,7 @@
     "express-rate-limit": "^7.5.0",
     "flag-icons": "^7.3.2",
     "google-auth-library": "^9.15.1",
+    "grammy": "^1.36.3",
     "http-errors": "^2.0.0",
     "jws": "^4.0.0",
     "mongoose": "^8.14.2",
@@ -28,7 +31,8 @@
     "nanoid": "^5.1.5",
     "nodemailer": "^7.0.2",
     "path-to-regexp": "8.0.0",
-    "react-facebook-login": "^4.1.1"
+    "react-facebook-login": "^4.1.1",
+    "telegraf": "^4.16.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
