--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "prettier": "^3.5.3"
   },
   "dependencies": {
-    "react-router-dom": "^7.6.1"
+    "react-router-dom": "^7.6.1",
+    "express-rate-limit": "^7.5.0"
   }
 }
