--- a/client/package.json
+++ b/client/package.json
@@ -11,37 +11,25 @@
   },
   "dependencies": {
     "@maplibre/maplibre-gl-leaflet": "^0.1.0",
-    "@tailwindcss/vite": "^4.1.6",
-    "autoprefixer": "^10.4.21",
     "axios": "^1.9.0",
     "framer-motion": "^12.10.0",
     "leaflet": "^1.9.4",
-    "leaflet-routing-machine": "^3.2.12",
-    "postcss": "^8.5.3",
     "react": "^19.1.0",
-    "react-animated-weather": "^4.0.1",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
-    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.6.1",
-    "react-select": "^5.10.1",
-    "tailwindcss": "^4.1.5",
-    "yarn": "^1.22.22"
+    "react-select": "^5.10.1"
   },
   "devDependencies": {
-    "@eslint/js": "^9.28.0",
+    "@tailwindcss/vite": "^4.1.11",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^9.28.0",
-    "eslint-config-prettier": "^10.1.3",
-    "eslint-import-resolver-typescript": "^4.3.4",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-hooks": "^5.1.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
+    "autoprefixer": "^10.4.21",
     "globals": "^15.15.0",
-    "prettier": "^3.5.3",
-    "vite": "^6.2.0"
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.11",
+    "vite": "^6.2.0",
+    "yarn": "^1.22.22"
   }
 }
