--- a/package.json
+++ b/package.json
@@ -17,8 +17,5 @@
     "globals": "^16.1.0",
     "prettier": "^3.5.3"
   },
-  "dependencies": {
-    "react-router-dom": "^7.6.1",
-    "express-rate-limit": "^7.5.0"
-  }
+  "dependencies": {}
 }
