--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "prettier": "^3.5.3"
   },
   "dependencies": {
-    "react-router-dom": "^7.6.1",
-    "express-rate-limit": "^7.5.0"
+    "bcrypt": "^6.0.0",
+    "express-rate-limit": "^7.5.0",
+    "jsonwebtoken": "^9.0.2",
+    "react-router-dom": "^7.6.1"
   }
 }
